<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <EditText
                android:id="@+id/emailreset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_email_hint"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/resetPasswordBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:backgroundTint="@color/btnblue"
                android:text="@string/resetpassword_btn"
                android:textAllCaps="false" />

        </LinearLayout>


    </LinearLayout>




    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword_heading"
        android:textSize="120px"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

</androidx.constraintlayout.widget.ConstraintLayout>